--- a/params.yaml
+++ b/params.yaml
@@ -1,9 +1,9 @@
-model_type: RandomForestRegressor
-lr: 0.0021
+model_type: LogisticRegression
+lr: 0.0041
 random_state: 42
 
 train:
   epochs: 100
-  alpha: 0.1
-  l1_rate: 0.6
+  alpha: 0.01
+  l1_rate: 0.5
   
